--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,7 +74,7 @@ import Layout from '@/layouts/Layout.astro'
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/astro-sumi/static/background.webp');
+    background-image: url('/static/background.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
