--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,7 @@
   src: url('/fonts/GeistMonoVF.woff2') format('woff2-variations');
   font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 :root {
