--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -3,15 +3,15 @@ import { SITE } from '@/consts'
 import { withBase } from '@/lib/utils/url'
 ---
 
-<!-- Standard favicon -->
+<!-- Standard favicon (order matters: SVG first for modern browsers, then fallbacks) -->
+<link rel="icon" type="image/svg+xml" href={withBase('/favicon.svg')} />
 <link
   rel="icon"
   type="image/webp"
   href={withBase('/favicon-96x96.webp')}
   sizes="96x96"
 />
-<link rel="icon" type="image/svg+xml" href={withBase('/favicon.svg')} />
-<link rel="shortcut icon" href={withBase('/favicon.ico')} />
+<link rel="icon" type="image/x-icon" href={withBase('/favicon.ico')} />
 
 <!-- Apple Touch Icon -->
 <link
